# Basics

./: Basics.sln  Makefile  Tasks.sln
Agent/: Agent.cpp  Agent.vcxproj  Agent.vcxproj.filters  Agent1.cpp  ReadMe.txt  stdafx.cpp  stdafx.h
Algorithms/: Algorithms.cpp  Algorithms.vcxproj  Algorithms.vcxproj.filters  Graph.cpp  Graph.h  List.cpp  List.h  Tree.cpp  Tree.h
ConsoleApplication6/: ConsoleApplication6.vcxproj.filters  Task.cpp
Cpp/: Complex.cpp  Complex.h  Cpp.cpp  Cpp.h  Cpp.vcxproj  Cpp.vcxproj.filters  CppStarter.cpp  Makefile  NumberPlay.cpp  NumberPlay.h  SharedPtr.h  Template.cpp  Template.h
Multithreading/: Examples.cpp  Examples.h  MT.cpp  Makefile  Monitor.cpp  Monitor.h  Multithreading.vcxproj  Multithreading.vcxproj.filters  SpinLock.cpp
Tasks/: Bytes.cpp  Bytes.h  CutTheTree.cpp  CutTheTree.h  Makefile  Node.cpp  Node.h  StringTasks.cpp  StringTasks.h  Task.cpp  TaskStarter.cpp  Tasks.cpp  Tasks.h  Tasks.vcxproj  Tasks.vcxproj.filters  stlheaders.h
Tests/: CMakeLists.txt  Makefile  Makefile.simple  cpp_test.cpp  tasks_test.cpp  unit_test.cpp
